Fixing scrollbar appearance

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
-.App {
-  text-align: center;
+body,
+html {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 /* cancel autofill formatting in chrome */
